@@ -439,7 +439,8 @@ QUESTS, DISEASES, POISONS, TICKS, MAGIC, TECH, CLANITEMS, COMMANDJOURNAL, \
 TITLES, NOPURGE, BANNED, RACECATS, LOG, USERS, LINKAGES, REPORTS, THREADS, \
 RESOURCES, ONEWAYDOORS, CHANTS, POWERS, SUPERPOWERS, CLANS, GOVERNMENTS, CRON, \
 FACTIONS, MATERIALS, OBJCOUNTERS, POLLS, CONTENTS, BUGS, TYPOS, IDEAS, TASKS, \
-NEWS, AREAS, SESSIONS, AREATYPE, REALESTATE, SELECT:, or AUTOAWARDS, ASSISTS... \
+NEWS, AREAS, SESSIONS, AREATYPE, REALESTATE, SELECT:, AUTOAWARDS, ASSISTS, \
+DBCONNECTIONS... \
 depending upon the listers security.\n\r\
 \n\r\
 Additional help *may* be available by entering HELP LIST [X] where X is one of the above.
@@ -498,6 +499,13 @@ Command  : LIST\n\r\
 Usage    : LIST PLANES\n\r\
 Example  : list planes\n\r\
 Lists the planes of existence.
+
+LIST_DBCONNECTIONS=\
+Command  : LIST\n\r\
+Usage    : LIST DBCONNECTIONS (LONG)\n\r\
+Example  : list dbconnections\n\r\
+Lists your database connections and their current status. \n\r\
+LONG will add a stack trace dump if the connection is in use.
 
 LIST_ABILITYFLAGS=\
 Command  : LIST\n\r\
